# aoc_2019

./: CMakeLists.txt
day01/: main.c
day01-1/: main.c
day01-2/: main.c
day02/: main.c
day02-1/: main.c
day02-2/: main.c
day03/: main.c
day04/: main.c
day05/: main.c
day06/: main.c
day07/: main.c
