cmake_minimum_required(VERSION 3.15)
project(advent C)

set(CMAKE_C_STANDARD 99)

add_executable(day01-1 day01-1/main.c)
add_executable(day01-2 day01-2/main.c)
add_executable(day02-1 day02-1/main.c)
add_executable(day02-2 day02-2/main.c)
add_executable(day03 day03/main.c)
add_executable(day04 day04/main.c)